tools/flowc/tests/errors/error27.flow
import ds/list;

main() {
	// Using a non-exported name:

	countListRec(makeList(), 0);
}
